<resources>
    <string name="app_name">Elevator</string>
    <string name="set_param">设置参数</string>
    <string name="select_param">选择参数</string>
    <string name="elevator_num">电梯数</string>
    <string name="elevator_one">一部</string>
    <string name="elevator_two">两部</string>
    <string name="elevator_three">三部</string>
    <string name="floor_num">楼层数</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="set_param_error">请输入正确的参数</string>
    <string name="start">开始</string>
    <string name="stop">暂停</string>
</resources>
