<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elevator_num" />

    <RadioGroup
        android:id="@+id/elevator_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/elevator_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elevator_one" />

        <RadioButton
            android:id="@+id/elevator_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/elevator_two" />

        <RadioButton
            android:id="@+id/elevator_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/elevator_three" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/floor_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/floor_num"
            android:inputType="number"
            android:maxLength="2" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>